--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Environmental Informatics Using Research Infrastructures and their Data, Duffy & Ruddell 2020</h2>
+							<h2>Environmental Informatics Using Research Infrastructures and their Data</h2>
+							<h3> **Duffy & Ruddell, 2020** </h3>
 							<p>An open-source textbook that provides an introduction to environmental and ecological informatics in the context of “big science”- that is, in the context of research infrastructures and observatories that collect and publish reams of observations and derived data products about the earth and its environment.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://katharynduffy.github.io/Environmental-Informatics-Using-Research-Infrastructures-and-their-Data/" class="button">Get the book</a></li>
 							</ul>
 						</div>
 						<div class="image">
