--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Environmental Informatics Using Research Infrastructures and their Data</h2>
-							<h3> **Duffy & Ruddell, 2020** </h3>
+							<h3> <i>Duffy & Ruddell, 2020</i> </h3>
 							<p>An open-source textbook that provides an introduction to environmental and ecological informatics in the context of “big science”- that is, in the context of research infrastructures and observatories that collect and publish reams of observations and derived data products about the earth and its environment.</p>
 							<ul class="actions stacked">
 								<li><a href="https://katharynduffy.github.io/Environmental-Informatics-Using-Research-Infrastructures-and-their-Data/" class="button">Get the book</a></li>
@@ -49,10 +49,10 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Team Based Interdisciplinary Research</h2>
-							<p>An open textbook coming in Fall of 2021</p>
+							<h2>Team-Based Interdisciplinary Research</h2>
+							<p>An new open textbook coming in Fall of 2021</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://katharynduffy.github.io/Research" class="button">Preview the book</a></li>
 							</ul>
 						</div>
 						<div class="image">
