--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<h1>Katharyn Duffy, Ph.D</h1>
 							<p class="major">EcoInformatics | Northern Arizona University | Flagstaff, Arizona</a>.</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">Explore my projects</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -63,10 +63,10 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Research Highlight: How Close Are We to the Temperature Tipping Point of the Terrestrial Biosphere?</h2>
+							<p>KA Duffy, CR Schwalm, VL Arcus, GW Koch, LL Liang, LA Schipper, Science advances 7 (3), eaay1052</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://advances.sciencemag.org/content/7/3/eaay1052" class="button">Read our paper</a></li>
 							</ul>
 						</div>
 						<div class="image">
