--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="content">
 							<h2>Environmental Informatics Using Research Infrastructures and their Data</h2>
 							<h3> <i>Duffy & Ruddell, 2020</i> </h3>
-							<p>An open-source textbook that provides an introduction to environmental and ecological informatics in the context of “big science”- that is, in the context of research infrastructures and observatories that collect and publish reams of observations and derived data products about the earth and its environment.</p>
+							<p>An open-source textbook that provides an introduction to environmental and ecological informatics in the context of “big science”.  It provides context and hands on coding exercises for research infrastructures and observatories that collect and publish reams of observations and derived data products about the earth and its environment.</p>
 							<ul class="actions stacked">
 								<li><a href="https://katharynduffy.github.io/Environmental-Informatics-Using-Research-Infrastructures-and-their-Data/" class="button">Get the book</a></li>
 							</ul>
@@ -50,7 +50,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Team-Based Interdisciplinary Research</h2>
-							<p>An new open textbook coming in Fall of 2021</p>
+							<p>An new open textbook coming in Fall of 2021.  Stay tuned!</p>
 							<ul class="actions stacked">
 								<li><a href="https://katharynduffy.github.io/Research" class="button">Preview the book</a></li>
 							</ul>
@@ -73,12 +73,24 @@
 							<img src="images/spotlight03.jpg" alt="" />
 						</div>
 					</section>
-
-				<!-- Five -->
+					<!-- Five -->
+						<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+							<div class="content">
+								<h2>phenoSynth</h2>
+								<p>An Open-Source R-Shiny Application to Integrate MODIS and PhenoCam Data</p>
+								<ul class="actions stacked">
+									<li><a href="https://git.earthdata.nasa.gov/projects/APIS/repos/phenosynth/browse" class="button">Use our app</a></li>
+								</ul>
+							</div>
+							<div class="image">
+								<img src="images/spotlight04.jpg" alt="" />
+							</div>
+						</section>
+				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>About</h2>
+							<p>I'm an Earth Systems Scientist who turned into an ecological data addict.  My training focused on the terrestrial biosphere (land based plants) but I now work with and build tutorials on many facets of the Ecological Data Revolution.</p>
 						</div>
 
 						<!-- Gallery -->
