--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://twitter.com/DrKatharynDuffy" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://scholar.google.com/citations?user=gNdo2TkAAAAJ&hl=en" class="ai ai-google-scholar-square ai-3x"><span class="label">Google Scholar</span></a></li>
+								<li><a href="https://scholar.google.com/citations?user=gNdo2TkAAAAJ&hl=en" class="ai ai-google-scholar ai-3x"><span class="label"></span></a></li>
 								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
