--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="https://twitter.com/DrKatharynDuffy" class="icon brands style2 fa-twitter-square"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/DrKatharynDuffy" class="icon brands style2 fa-twitter-square-3x"><span class="label">Twitter</span></a></li>
 								<li><a href="https://scholar.google.com/citations?user=gNdo2TkAAAAJ&hl=en" class="ai ai-google-scholar-square ai-2x"><span class="label"></span></a></li>
 								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
