--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								</ul>
 							</div>
 							<div class="image">
-								<img src="images/spotlight04.jpg" alt="" />
+								<img src="images/spotlight04.png" alt="" />
 							</div>
 						</section>
 				<!-- Six -->
@@ -324,7 +324,7 @@
 								<li><a href="https://scholar.google.com/citations?user=gNdo2TkAAAAJ&hl=en" class="ai ai-google-scholar-square ai-2x"><span class="label"></span></a></li>
 								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:katharyn.duffy@nau.edu" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; Katharyn Duffy | Photos by Lara Kobelt | Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
