--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						</div>
 					</section>
 					<!-- Five -->
-						<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 							<div class="content">
 								<h2>phenoSynth</h2>
 								<p>An Open-Source R-Shiny Application to Integrate MODIS and PhenoCam Data</p>
