--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
+									<a href="https://youtu.be/JOlVcHrtl8M" class="image">
+										<img src="images/gallery/thumbs/01.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>We can improve phenological data integration</h3>
+										<p>ESA 2020 Meeting</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
