--- a/index.html
+++ b/index.html
@@ -103,31 +103,31 @@
 										<h3>We can improve phenological data integration</h3>
 										<p>ESA 2020 Meeting</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Watch</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
+									<a href="https://youtu.be/1ZrUTaNCPUU" class="image">
 										<img src="images/gallery/thumbs/02.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Ditching data and embracing empathy for effective science communication</h3>
+										<p>A guest lecture in our rotating EcoFinformatics Seminar Series by Dr. Jacquelyn Gill</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Watch</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
+									<a href="https://www.youtube.com/watch?v=E8oU_xliej8" class="image">
+										<img src="images/gallery/thumbs/03.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Magna Amet</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Gypsy Moth Defoliation in Worcester, Massachusetts</h3>
+										<p>2018 vs. 2019 digital repeat photography that caught an interesting biological invasion </p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Watch</span></li>
 										</ul>
 									</div>
 								</article>
