--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 									</a>
 									<div class="caption">
 										<h3>Ditching data and embracing empathy for effective science communication</h3>
-										<p>A guest lecture in our rotating EcoFinformatics Seminar Series by Dr. Jacquelyn Gill</p>
+										<p>A guest lecture in our rotating EcoInformatics Seminar Series by Dr. Jacquelyn Gill</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Watch</span></li>
 										</ul>
