--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 								</article>
 								<article>
 									<a href="https://youtu.be/1ZrUTaNCPUU" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+										<img src="images/gallery/thumbs/02.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Ditching data and embracing empathy for effective science communication</h3>
