--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								</ul>
 							</div>
 							<div class="image">
-								<img src="images/spotlight04.png" alt="" />
+								<img src="images/new2.gif" alt="" />
 							</div>
 						</section>
 				<!-- Six -->
