--- a/index.html
+++ b/index.html
@@ -320,10 +320,10 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="https://twitter.com/DrKatharynDuffy" class="icon brands style1 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/DrKatharynDuffy" class="icon brands style1 fa-twitter fa-2x"><span class="label">Twitter</span></a></li>
 								<li><a href="https://scholar.google.com/citations?user=gNdo2TkAAAAJ&hl=en" class="ai ai-google-scholar ai-2x"><span class="label"></span></a></li>
-								<li><a href="https://www.linkedin.com/in/katharyn-duffy-694479201/" class="icon brands style1 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:katharyn.duffy@nau.edu" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/katharyn-duffy-694479201/" class="icon brands style1 fa-linkedin-in fa-2x"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:katharyn.duffy@nau.edu" class="icon style1 fa-envelope fa-2x"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; Katharyn Duffy | Photos by Lara Kobelt | Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
