adding CV button

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 						<div class="inner">
 							<h2>About</h2>
 							<p>I'm an Earth Systems Scientist who turned into an ecological data addict.  My training focused on the terrestrial biosphere (land based plants) but I now work with and build tutorials on many facets of the Ecological Data Revolution.</p>
+							<ul class="actions stacked">
+								<li><a href="https://docs.google.com/document/d/1L-tjHBgHECqSYYIPUbp3MfYg862Dou1oYxTi_CYEesc/edit?usp=sharing" class="button">My CV</a></li>
+							</ul>
 						</div>
 
 						<!-- Gallery -->
