Building links for next textbook

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<h2>Team-Based Interdisciplinary Research</h2>
 							<p>An new open textbook coming in Fall of 2021.  Stay tuned!</p>
 							<ul class="actions stacked">
-								<li><a href="https://katharynduffy.github.io/Research" class="button">Preview the book</a></li>
+								<li><a href="https://katharynduffy.github.io/TeamBasedResearch/" class="button">Preview the book</a></li>
 							</ul>
 						</div>
 						<div class="image">
